2018-06-01 Tomas Dado <tomas.dado@cern.ch>
	* Added cosmetic option for multifit to set the name of POI on plots:
	"POILabel"
	* Added cosmetic option for multifit to set the value for SM expectation
	of POI on plots: "POINominal"
	* Added protection for "DataName" configuration

2018-05-31 Tomas Dado <tomas.dado@cern.ch>
	* Added protection when GHOST samples are defined after other samples
	* Added automatic check if the used samples/regions are actually defined
	* Added option to disable the check for regions/samples (will print only
	warnings) - may be useful for debugging

2018-05-31 Alexander Held <alexander.held@cern.ch>
    * fixing blinding threshold calculation (fixes TTHFITTER-193)
    * previously S/(S+B) was calculated and compared to BlindingThreshold
    * now S/B is calculated instead, as originally intended and documented in the readme

2018-05-30 Alexander Held <alexander.held@cern.ch>
    * enabling syst error bars by default (default value for SystErrorBars is now TRUE)

2018-05-21 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Added morphing template smoothing
    * Added toys to compare with uncertainty from the fit (tested just for stat uncertainty on Asimov, need more checks, need to understand why getting stuck at first invalid fit)
    * Added functionality for non-profile fit (stat-only fits on Asimoc with syst variations one at a time)
    * String comparison internal functionality improved for wildcards
    * Updated fixes from 4top paper
    * Various fixes
    * Tagging TtHFitter-00-03-25: backup version before merging with Common scripts implementation (version for 4top paper)

2018-05-18 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Tagging TtHFitter-00-03-24: first tag with new config syntax check
    
2018-05-03 Tomas Dado <tomas.dado@cern.ch>
    * Fixing bug in ConfigParser that would not check the setting if option
	were not int/ string or float