@@ -1,3 +1,8 @@
+2018-06-27 Alexander Held <alexander.held@cern.ch>
+    * fixing MCstatConstraint option to work with new config reading
+    * setting default constraint term for MC stat to Poisson (was Gaussian previously)
+    * adding FILLUPFRAME setting to SystDataPlots option in reference config
+
 2018-06-01 Tomas Dado <tomas.dado@cern.ch>
 	* Added cosmetic option for multifit to set the name of POI on plots:
 	"POILabel"
